--------------------------------

 New features:
 * Add a "cvs2git" script for starting conversions to git (or Mercurial).
 * Add a "cvs2bzr" script for starting conversions to Bazaar.
 * Generate manual pages automatically via new --man option.
 * Allow --mime-types and --auto-props options to be specified more than once.
 * Support author transforms when converting to Subversion.

 Bugs fixed:
 * cvs2git with non-inline blobs: a revision after a delete could be empty.
 * Fix timezone handling under Windows (which does not respect TZ variable).
 * Do path comparisions platform-independently in symbol transform classes.
 * Fix https://bugs.launchpad.net/pld-linux/+bug/385920

 Improvements and output changes:
 * Output error message if a revision's deltatext is missing.
 * Improve contrib/verify-cvs2svn.py (used for testing conversion accuracy).

 Miscellaneous:
 * Add an IgnoreSymbolTransform class, for ignoring symbols matching a regexp.
 * Remove some DeprecationWarnings when running under newer Python versions.


Version 2.2.0 (23 November 2008)
--------------------------------

 New features:
 * cvs2git: Omit fixup branch if a tag can be copied from an existing revision.
 * cvs2git: Add option to set the maximum number of merge sources per commit.
 * Allow arbitrary SVN directories to be created when a project is created.
 * Allow vendor branches to be excluded, grafting child symbols to trunk.
 * By default, omit trivial import branches from conversion.
   - Add --keep-trivial-imports option to get old behavior.
 * By default, don't include .cvsignore files in output (except as svn:ignore).
   - Add option --keep-cvsignore to get the old behavior.
 * Allow the user to specify the form of cvs2svn-generated log messages.
 * Allow file contents to be written inline in git-fast-import streams.
 * --create-option: allow arbitrary options to be passed to "svnadmin create".
 * Improve handling of auto-props file: